fix youtube overflow

--- a/earthreader/web/static/css/master.css
+++ b/earthreader/web/static/css/master.css
@@ -25,6 +25,10 @@ img {
 	height: auto !important;
 }
 
+iframe {
+	max-width: 100% !important;
+}
+
 body .wrapper {
 	margin-top: -3em;
 	padding-top:3em;
